Update maven-surefire-plugin for jdk11